# pyergon

./: .gitignore  README.md  benchmark.py  benchmark_celery.py  benchmark_celery_vs_ergon.py  benchmark_ergon.py  pyproject.toml  pyrightconfig.json  setup.cfg  test_child_flow.py  test_child_with_timer.py  test_simple_flow.py  test_timer_only.py  validate_results.py
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml
benchmarks/: benchmark.py  benchmark_celery.py  benchmark_celery_vs_ergon.py  benchmark_memory_locks.py
examples/: child_flow_retryable.py  complex_multi_worker_load.py  complex_multi_worker_load_sqlite.py  comprehensive_demo.py  comprehensive_demo_3.py  concurrent_segmented_sieve.py  concurrent_segmented_sieve_direct.py  concurrent_segmented_sieve_free_threaded.py  custom_error_boxed.py  dag_limit_parallel.py  dag_limit_sequential.py  dag_non_deterministic.py  distributed_worker_timer.py  external_signal_abstraction.py  fibonacci.py  graceful_shutdown_demo.py  graceful_shutdown_demo_redis.py  graceful_shutdown_demo_sqlite.py  nested_flows.py  nested_flows_real.py  numpy_computation_pipeline.py  retryable_error_proof.py  retryable_error_proof_sqlite.py  saga.py  simple_timer_sqlite.py  simple_workflow.py  test_dag_multiple_invoke_versioned.py  test_retryability.py  timer_child_minimal.py
src/ergon/: __init__.py  decorators.py
src/ergon/core/: __init__.py  child_flow_error.py  context.py  invocation.py  invokable_flow.py  retry.py  timer_info.py  types.py
src/ergon/executor/: __init__.py  child_completion.py  dag.py  dag_runtime.py  execution.py  instance.py  outcome.py  pending_child.py  scheduler.py  signal.py  timer.py  worker.py
src/ergon/storage/: __init__.py  base.py  memory.py  redis.py  sqlite.py
src/pyergon/: __init__.py  decorators.py
src/pyergon/core/: __init__.py  call_type.py  child_flow_error.py  context.py  flow_type.py  invocation.py  invokable_flow.py  retry.py  status.py  timer_info.py  types.py
src/pyergon/executor/: __init__.py  child_completion.py  dag.py  dag_runtime.py  execution.py  instance.py  outcome.py  pending_child.py  scheduler.py  signal.py  suspension_payload.py  timer.py  worker.py
src/pyergon/models/: __init__.py  invocation.py  retry.py  scheduled_flow.py  status.py  timer_info.py
src/pyergon/storage/: __init__.py  base.py  memory.py  redis.py  sqlite.py
tests/: conftest.py  test_async.py  test_basic.py  test_caching.py  test_comprehensive_coverage.py  test_concurrency.py  test_dag.py  test_dag_execution.py  test_dag_runtime.py  test_decorator_edge_cases.py  test_decorators.py  test_durability.py  test_execution_retry.py  test_flow_outcome.py  test_instrumentation.py  test_integration_flows.py  test_invocation_model.py  test_memory_storage.py  test_pending_child_edge_cases.py  test_properties.py  test_signals.py  test_sqlite_edge_cases.py  test_timer_edge_cases.py  test_worker_edge_cases.py
