# Pure Python pyproject.toml (without PyO3/Rust)
# This will replace pyproject.toml once we remove Rust code

[project]
name = "pyergon"
version = "0.4.0"
description = "Durable execution framework for Python"
authors = [{ name = "Richard chukwu" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["workflow", "durable-execution", "temporal", "async", "llm"]

dependencies = [
    "aiosqlite==0.21.0", # Async SQLite storage backend
    "redis[hiredis]>=5.0.0,<6.5", # Async Redis storage backend (compatible with Celery + hiredis for performance)
    "numpy==2.4.0", # For scientific computation examples (latest stable as of Dec 2024)
    "uuid7>=0.1.0", # UUID7 backport for Python 3.11+ (time-ordered UUIDs)
    "xxhash>=3.0.0", # Fast non-cryptographic hashing (4-6x faster than SHA256)
    "celery[redis]>=5.4.0", # Distributed task queue for benchmarking comparison
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "pytest-xdist>=3.0",
    "pytest-cov==7.0.0",
    "hypothesis==6.148.8",
    "mutmut==3.4.0",
    "black>=23.0",
    "mypy==1.19.0",
    "ruff==0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: async tests",
    "integration: integration tests",
    "slow: slow running tests",
    "chaos: chaos/resilience tests",
    "durability: durability tests",
    "concurrency: concurrency tests",
    "property: property-based tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
]
